# marketing

./: .gitignore  LICENSE  index.html  royal-match-staff.tsx  saco_base64.txt  saco_base64_oneline.txt  saco_data_uri.txt  staff-page.html
.claude/: launch.json  settings.local.json
.claude/commands/: company.md
company/: CLAUDE.md
company/secretary/: CLAUDE.md
company/secretary/inbox/reviews/: 2026-03-30-porthouse-shibuya-google.md
company/secretary/notes/: email-archive.md
company/secretary/todos/: 2026-03-27.md  2026-03-28.md  2026-03-30.md
running-trainer/: README.md  pyproject.toml
running-trainer/src/running_trainer/: advisor.py  cli.py  db.py  storage.py  summary.py
running-trainer/src/running_trainer/sources/: oura.py  strava.py
scripts/: copy_credentials.py
staff/: index.html
terraform/: .gitignore  README.md
terraform/hatsudai/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/honmachi/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/shibuya/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
